syntax = "proto3";

package api;

option go_package = "github.com/yourusername/agent-opus/backend/api/proto;proto";

import "common.proto";
import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "google/api/annotations.proto";

// Document 文档实体
message Document {
  string id = 1;
  string knowledge_base_id = 2;
  string title = 3;
  string content = 4;
  google.protobuf.Struct metadata = 5;
  string status = 6;                          // processing, completed, failed
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;
}

// KnowledgeBase 知识库实体
message KnowledgeBase {
  string id = 1;
  string name = 2;
  string description = 3;
  string type = 4;                            // document, qa, structured
  string embedding_model = 5;                 // 嵌入模型
  google.protobuf.Struct chunk_config = 6;   // 分块配置
  string created_by = 7;
  int64 document_count = 8;                   // 文档数量
  int64 vector_count = 9;                     // 向量数量
  google.protobuf.Timestamp created_at = 10;
  google.protobuf.Timestamp updated_at = 11;
}

// 创建知识库请求
message CreateKnowledgeBaseRequest {
  string name = 1;
  string description = 2;
  string type = 3;
  string embedding_model = 4;
  google.protobuf.Struct chunk_config = 5;
}

// 列表知识库请求
message ListKnowledgeBasesRequest {
  string type = 1;
  int32 page = 2;
  int32 page_size = 3;
}

// 列表知识库响应
message ListKnowledgeBasesResponse {
  repeated KnowledgeBase items = 1;
  int32 page = 2;
  int32 page_size = 3;
  int64 total = 4;
}

// 获取知识库请求
message GetKnowledgeBaseRequest {
  string id = 1;
}

// 上传文档请求
message UploadDocumentRequest {
  string knowledge_base_id = 1;
  string title = 2;
  string content = 3;
  google.protobuf.Struct metadata = 4;
}

// 删除知识库请求
message DeleteKnowledgeBaseRequest {
  string id = 1;
}

// 删除知识库响应
message DeleteKnowledgeBaseResponse {
  string id = 1;
}

// KnowledgeBase 服务定义
service KnowledgeBaseService {
  // 创建知识库
  rpc CreateKnowledgeBase(CreateKnowledgeBaseRequest) returns (KnowledgeBase) {
    option (google.api.http) = {
      post: "/api/v1/knowledge-bases"
      body: "*"
    };
  }

  // 获取知识库列表
  rpc ListKnowledgeBases(ListKnowledgeBasesRequest) returns (ListKnowledgeBasesResponse) {
    option (google.api.http) = {
      get: "/api/v1/knowledge-bases"
    };
  }

  // 获取知识库详情
  rpc GetKnowledgeBase(GetKnowledgeBaseRequest) returns (KnowledgeBase) {
    option (google.api.http) = {
      get: "/api/v1/knowledge-bases/{id}"
    };
  }

  // 上传文档
  rpc UploadDocument(UploadDocumentRequest) returns (Document) {
    option (google.api.http) = {
      post: "/api/v1/knowledge-bases/{knowledge_base_id}/documents"
      body: "*"
    };
  }

  // 删除知识库
  rpc DeleteKnowledgeBase(DeleteKnowledgeBaseRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/api/v1/knowledge-bases/{id}"
    };
  }
}
